# UnB_SSTD

./: README.md  foobar.ipynb  foobar.py  pyproject.toml  scripts.py
lista-3/: lista.ipynb
project-1/: pyproject.toml
project-1/Projeto_1/: _falhas.py  projeto1.ipynb
project-1/Tutorial/: Tutorial.ipynb
project-2/Projeto_2/: projeto2.ipynb
project-2/Tutorial/: Tutorial2.ipynb
project-3/main/: projeto3.ipynb
