[tool.poetry]
name = "unb-sstd"
version = "0.1.0"
description = ""
authors = ["GabrielRQueiroz <gabrielr.queiroz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.12.0"
notebook = "^7.1.2"
pillow = "^10.3.0"
matplotlib = "^3.8.3"

[tool.poetry.scripts]
proj1 = "scripts:main"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
